(minor) Sell: novalidate html5

--- a/templates/search/sell_create.jade
+++ b/templates/search/sell_create.jade
@@ -35,7 +35,7 @@ div.ng-cloak(ng-controller="sellController")
     )
       {{ 'alert.message' | ng }}
 
-  form(method='post')
+  form(method='post', novalidate)
 
       .row
         .col-md-3
