Sell search: simply search for soldcards, not a Sell object
- ui presentation is easier: a line per item sold, not a line per sell
  transaction with the need to list the items sold afterwards. Sells can
  also be grouped in the ui with their id.
- searching for cards of a given distributor id is much simpler

--- a/templates/search/history.jade
+++ b/templates/search/history.jade
@@ -39,6 +39,18 @@ div(ng-controller="historyController")
         uib-tab(heading='{% trans "Entries" %}', select="history_entries()")
         //- uib-tab(heading='{% trans "Movements" %}', select="filterHistory('InternalMovement')")
 
+    .col-md-3
+      ui-select(ng-model="distributor.selected", ng-change="distChanged()")
+        ui-select-match(placeholder="{% trans 'Distributor' %}")
+          span(ng-bind="$select.selected.repr")
+        ui-select-choices(
+          repeat="item in (distributors | filter:$select.search) track by item.id",
+          refresh="refreshDistributors($select.search, $select)",
+          refresh-delay="100")
+          span(ng-bind="item.name")
+
+    //- div dist: {{ 'distributor.selected' | ng }}
+
     button.button.btn.btn-default(type="button", ng-click="toggle_details()", title='{% trans "Hide and show details (d)" %}')
       i.glyphicon.glyphicon-th-list
 
