--- a/templates/search/searchresults.jade
+++ b/templates/search/searchresults.jade
@@ -131,6 +131,8 @@ div(ng-cloak, ng-show="cards", ng-controller="searchResultsController")
             li.mouse-pointer: a(ng-click="next_results()", aria-label="Next", title="{% trans 'Next results' %}")
               span(aria-hidden="true") &raquo;
 
+ div(ng-show="no_results") {% trans "No results" %}
+
  script(type="text/ng-template", id="SearchResultsModal.html")
     div.modal-header
       h3.modal-title {% trans "Add to basket(s)" %}
