History sells: export selection as csv
for #41 - History of sells and other movements per distributor

--- a/templates/search/history.jade
+++ b/templates/search/history.jade
@@ -26,7 +26,7 @@
 
 div(ng-controller="historyController")
     div
-        alert(
+        alert.ng-cloak(
           ng-repeat="alert in alerts"
           type="{{ 'alert.level' | ng }}"
           close="closeAlert($item)"
