Reword "distributor" to "supplier"
for #44 - Replace "distributor" by "supplier"

--- a/templates/search/baskets.jade
+++ b/templates/search/baskets.jade
@@ -67,7 +67,7 @@ div(ng-cloak, ng-controller="basketsController")
 
        li: a(href="#", ng-click="command()", title='{% trans "Mark all the cards to command" %}') {% trans "Command…" %}
        li: a(href="#", ng-click="receive_command()", title='{% trans "Receive a command and check you received all the books" %}') {% trans "Receive a command" %}…
-       li: a(href="#", ng-click="open_to_deposit('md')", title='{% trans "You can transform this list of books to a deposit. You will be asked the distributor and the discount." %}') {% trans "Transform as deposit" %}…
+       li: a(href="#", ng-click="open_to_deposit('md')", title='{% trans "You can transform this list of books to a deposit. You will be asked the supplier and the discount." %}') {% trans "Transform as deposit" %}…
        li.divider(role="separator")
        li: a(href="#", ng-click="delete_basket()", title='{% trans "Delete this list. This can not be undone" %}') {% trans "Delete this list" %}
 
