--- a/templates/search/card_edit.jade
+++ b/templates/search/card_edit.jade
@@ -107,7 +107,7 @@ div.ng-cloak(ng-controller="cardCreateController", ng-show="ready")
 
         div
           span
-            h5 {% trans "Distributor" %}:
+            h5 {% trans "Supplier" %}:
               span {{ 'distributor.repr ' | ng }}
 
         span.col-lg-8
@@ -121,7 +121,7 @@ div.ng-cloak(ng-controller="cardCreateController", ng-show="ready")
               span(ng-bind="item.name")
 
         span
-            a(target="_blank", href="/admin/search/distributor/add",title='{% trans "Add a distributor" %}')
+            a(target="_blank", href="/admin/search/distributor/add",title='{% trans "Add a supplier" %}')
               i.glyphicon.glyphicon-plus-sign()
 
 
