--- a/templates/search/card_show.jade
+++ b/templates/search/card_show.jade
@@ -85,7 +85,7 @@
     for pub in object.get_publishers
                   a(href="{{pub.get_absolute_url}}", target="_blank"){{ pub.name }}
 
-    div {% trans "Distributor" %}:
+    div {% trans "Supplier" %}:
       .row
         ul.list-group
           .col-md-3
