--- a/templates/search/collection.jade
+++ b/templates/search/collection.jade
@@ -67,7 +67,7 @@ div(ng-cloak, ng-controller="collectionController")
           ng-options="elt.fields.name for elt in publishers")
 
     div
-      label.col-sm-4 {% trans "Distributor" %}
+      label.col-sm-4 {% trans "Supplier" %}
       div.col-md-8
         select.form-control(
           ng-model="distributor"
