--- a/templates/search/dashboard.jade
+++ b/templates/search/dashboard.jade
@@ -41,7 +41,7 @@ div(ng-controller="dashboardController", ng-cloak="stats")
           thead
             tr
               th {% trans "Deposit" %}
-              th {% trans "Distributor" %}
+              th {% trans "Supplier" %}
               th {% trans "due date" %}
           tbody
             tr(ng-repeat="depo in deposits")
