--- a/templates/search/deposits_view.jade
+++ b/templates/search/deposits_view.jade
@@ -30,7 +30,7 @@
     dt {% trans "Deposit" %}
     dd {{ deposit.name }}
 
-    dt {% trans "Distributor" %}
+    dt {% trans "Supplier" %}
     dd: a(href="{{deposit.distributor.get_absolute_url}}") {{ deposit.distributor }}
     dt {% trans "discount" %}
     dd {{ distributor.discount }} %
